kubernetes/main/apps/flux-system/flux-operator/instance/github/webhooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${CLUSTER_DOMAIN}
    hajimari.io/enable: "false"
spec:
  ingressClassName: external
  rules:
    - host: flux-receiver.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
